--- a/emacs/org-style.css
+++ b/emacs/org-style.css
@@ -1,5 +1,5 @@
 html {
-  font-family: sans-serif;
+  font-family: Lato, sans-serif;
   line-height: 1.15;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%
@@ -824,7 +824,7 @@ textarea {
 body {
   width: 95%;
   margin: 2% auto;
-  font: normal normal normal 18px/1.6em Georgia, serif;
+  font: normal normal normal 18px/1.6em Lato, sans-serif;
   color: #333
 }
 
@@ -931,9 +931,9 @@ h3,
 h4,
 h5,
 h6 {
-  color: #a5573e;
+  color: #527d9a;
   line-height: 1.6em;
-  font-family: Helvetica, sans-serif
+  font-family: Lato, sans-serif
 }
 
 h4,
